Fix double scroll bar

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,5 +1,6 @@
 body, html, #root, #root > div {
   height: 100%;
   margin: 0;
+  overflow: hidden;
   padding: 0;
 }
